# vmware-auditor

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vcenter.py
src/vmware_auditor/: vcenter.py
