[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vmware_auditor"
dynamic = ["version",]
authors = [
    {name="Randy Bartels", email="rjbartels@outlook.com"},
    ]
description = "Python program to collect useful security auditing information from vCenter"
readme = "README.md"
keywords = ["vmware", "infosec", "auditing", "esxi"]
requires-python = ">=3.10,<4"
dependencies = [
    "argparse",
    "pyvmomi==8.0.3.0.1",
    ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Utilities",
    ]

[project.optional-dependencies]
dev = ["pytest>=7.4.4",]
test = ["pytest>=7.4.4",]
pypi = ["build>=1.2.1", "twine>=5.0.0",]

[project.scripts]
vcenter = "vmware_auditor.vcenter:main"

[tool.setuptools.dynamic]
version = {attr = "vmware_auditor.__version__"}

[project.urls]
Homepage = "https://github.com/kirkpatrickprice/vmware-auditor"
Issues = "https://github.com/kirkpatrickprice/vmware-auditor/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src/"
addopts = ["--import-mode=importlib",]
markers = []
